[package]
name = "edge-tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"], optional = true }
tungstenite = { version = "0.20.0", features = ["native-tls-vendored"] }
ureq = { version = "2.7.1", features = ["json"], optional = true }
xml = "0.8.10"
url = "2.5.4"
socks = "0.3"
native-tls = "0.2.12"

[features]
voice_list = ["serde", "ureq"]
